--- a/ref-apps/lva-edge-iot-central-gateway/package.json
+++ b/ref-apps/lva-edge-iot-central-gateway/package.json
@@ -21,7 +21,7 @@
     "@hapi/hapi": "^19.1.1",
     "@hapi/wreck": "^17.0.0",
     "azure-iot-device": "1.17.0",
-    "azure-iot-device-mqtt": "1.15.0",
+    "azure-iot-device-mqtt": "^1.15.1",
     "azure-iot-provisioning-device": "1.8.4",
     "azure-iot-provisioning-device-mqtt": "1.7.4",
     "azure-iot-security-symmetric-key": "1.7.4",
