Remedy hapi package dependency with podium Update docker build instructions for ARM

--- a/ref-apps/lva-edge-iot-central-gateway/tsconfig.json
+++ b/ref-apps/lva-edge-iot-central-gateway/tsconfig.json
@@ -16,7 +16,13 @@
         ],
         "lib": [
             "es2016"
-        ]
+        ],
+        "baseUrl": ".",
+        "paths": {
+            "@hapi/podium": [
+                "node_modules/@types/hapi__podium"
+            ]
+        }
     },
     "include": [
         "./src/**/*.ts"
