--- a/ref-apps/lva-edge-iot-central-gateway/package.json
+++ b/ref-apps/lva-edge-iot-central-gateway/package.json
@@ -17,6 +17,7 @@
     "author": "sseiber",
     "license": "MIT",
     "dependencies": {
+        "@azure/storage-blob": "^12.5.0",
         "@hapi/boom": "^9.1.2",
         "@hapi/hapi": "^20.1.2",
         "@hapi/wreck": "^17.1.0",
@@ -27,8 +28,9 @@
         "azure-iot-security-symmetric-key": "1.7.7",
         "commander": "^7.2.0",
         "fs-extra": "^9.1.0",
+        "lodash.get": "^4.4.2",
+        "lodash.set": "^4.3.2",
         "moment": "^2.29.1",
-        "nconf": "^0.11.2",
         "pjson": "^1.0.9",
         "spryly": "^2.1.0",
         "uuid": "^8.3.2"
@@ -36,7 +38,6 @@
     "devDependencies": {
         "@types/hapi__hapi": "^20.0.7",
         "@types/jest": "^26.0.22",
-        "@types/nconf": "0.10.0",
         "@types/node": "^14.14.37",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
