--- a/ref-apps/lva-edge-iot-central-gateway/tsconfig.json
+++ b/ref-apps/lva-edge-iot-central-gateway/tsconfig.json
@@ -25,7 +25,9 @@
         }
     },
     "include": [
-        "./src/**/*.ts"
+        "./src/**/*.ts",
+        "storage/objectDetectorDevice.ts",
+        "storage/motionDetectorDevice.ts"
     ],
     "exclude": [
         "node_modules",
