WIP: checkpoint migration to AVA

--- a/ref-apps/lva-edge-iot-central-gateway/.vscode/launch.json
+++ b/ref-apps/lva-edge-iot-central-gateway/.vscode/launch.json
@@ -26,7 +26,7 @@
                 "EdgeModuleCACertificateFile": "${config:azure-iot-edge.EdgeModuleCACertificateFile}",
                 "NODE_ENV": "local",
                 "PORT": "9070",
-                "DATAMISC_ROOT": "${workspaceFolder}/storage",
+                "DATAMISC_ROOT": "${workspaceFolder}/configs",
                 "CONTENT_ROOT": "${workspaceFolder}/configs"
             }
         },
